--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yajna Prasad Swain - MERN STACK (Backend Developer) </title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/  6.0.0-beta3/css/all.min.css">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-brands/css/uicons-brands.css'>
    
 </head>
 <body>
@@ -29,10 +29,10 @@
             <h3>A <span>MERN STACK (Backend Developer)</span></h3>
             <p>Software Engineer with 2.5+ years of experience in developing and maintaining JavaScript,Node.js,Express.js,React.js,HTML5,CSS3,MongoDB,Databases,MyQL,PostgrreSQL applications. Eager to elevate ongoing projects or create new software solutions.</p>
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/yajna-prasad-swain-848613232/"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="bi bi-github"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/yajna-prasad-swain-848613232/"><i class="fi fi-brands-linkedin"></i></a>
+                <a href="https://github.com/YajnaPrasadSwain"><i class="fi fi-brands-github"></i></a>
+                <a href="https://x.com/"><i class="fi fi-brands-twitter"></i></a>
+                <a href=""><i class="fi fi-brands-instagram"></i></a>
             </div>
             <div class="btn-box">
                 <a href="#contact" class="btn">Hire Me</a>
@@ -294,10 +294,10 @@
                 <a href="#contact">Contact</a>
             </div>
             <div class="footer-social">
-                <a href="https://www.linkedin.com/in/yajna-prasad-swain-848613232/"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/yajna-prasad-swain-848613232/"><i class="fi fi-brands-linkedin"></i></a>
+                <a href="https://github.com/YajnaPrasadSwain"><i class="fi fi-brands-github"></i></a>
+                <a href=""><i class="fi fi-brands-twitter"></i></a>
+                <a href="https://www.instagram.com/"><i class="fi fi-brands-instagram"></i></a>
             </div>
             <div class="copyright">
                 &copy; 2023 <span>Yajna Prasad Swain</span>. All Rights Reserved.
