--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="hero-content">
             <h1>Hi, I'm <span>Yajn Prasad Swain</span></h1>
             <h3>A <span>MERN STACK (Backend Developer)</span></h3>
-            <p>Software Engineer with 3+ years of experience in developing and maintaining JavaScript,Node.js,Express.js,React.js,HTML5,CSS3,MongoDB,Databases,MyQL,PostgrreSQL applications. Eager to elevate ongoing projects or create new software solutions.</p>
+            <p>Software Engineer with 3.1+ years of experience in developing and maintaining JavaScript,Node.js,Express.js,React.js,HTML5,CSS3,MongoDB,Databases,MyQL,PostgrreSQL applications. Eager to elevate ongoing projects or create new software solutions.</p>
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/yajna-prasad-swain-848613232/"><i class="fi fi-brands-linkedin"></i></a>
                 <a href="https://github.com/YajnaPrasadSwain"><i class="fi fi-brands-github"></i></a>
@@ -36,7 +36,7 @@
             </div>
             <div class="btn-box">
                 <a href="#contact" class="btn">Hire Me</a>
-                <a href="yajna_Resume.pdf" class="btn">Download CV</a>
+                <a href="Yajna_Resume.pdf" class="btn">Download CV</a>
             </div>
         </div>
         <div class="hero-img">
@@ -53,7 +53,7 @@
             </div>
             <div class="about-text hidden">
                 <h3>MERN STACK Backend <span>Developer</span></h3>
-                <p>Software Engineer with 3+ years of experience in developing and maintaining JavaScript,Node.js,Express.js,React.js,HTML5,CSS3,MongoDB,Databases,MyQL,PostgrreSQL applications. Eager to elevate ongoing projects or create new software solutions.</p>
+                <p>Software Engineer with 3.1+ years of experience in developing and maintaining JavaScript,Node.js,Express.js,React.js,HTML5,CSS3,MongoDB,Databases,MyQL,PostgrreSQL applications. Eager to elevate ongoing projects or create new software solutions.</p>
                 <p>Skilled at writing code, maintaining and troubleshooting. Experienced at working across different teams.</p>
                 <div class="skills">
                     <h4>Technical Skills:</h4>
@@ -95,7 +95,7 @@
                 <i class="fas fa-building"></i>
                 <h3>Employee</h3>
                 <p>Brightcanyon solutions</p>
-                <p>jun 2022 - Present</p>
+                <p>Sep 2022 - Present</p>
                 <div class="experience-details">
                     <div>
                         <span>Location:</span>
@@ -114,7 +114,7 @@
                     </div>
                     <div>
                         <span>Duration:</span>
-                        <span>jun 2022 - aug 2023</span>
+                        <span>Aug 2022 - July 2023</span>
                     </div>
                     <div>
                         <span>Team Size:</span>
@@ -137,7 +137,7 @@
                     </div>
                     <div>
                         <span>Duration:</span>
-                        <span>sep 2023 - jun 2025</span>
+                        <span>Oct 2023 - Sep 2025</span>
                     </div>
                     <div>
                         <span>Team Size:</span>
